docs/api/v/2022.0.5/ui/label.md
#![](../../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2022.0.5`)  


---

## `luxe: ui/label` module

- [UILabel](#uilabel)   

---

### UILabel
`:::js import "luxe: ui/label" for UILabel`
> no docs found

- [create](#UILabel.create)(**ui_entity**: `Any`)
- [set_text](#UILabel.set_text+2)(**label**: `Any`, **text**: `Any`)
- [get_text](#UILabel.get_text)(**label**: `Any`)
- [get_render_text](#UILabel.get_render_text)(**label**: `Any`)
- [get_text_extents](#UILabel.get_text_extents+3)(**label**: `Any`, **offset**: `Any`, **count**: `Any`)
- [get_text_extents](#UILabel.get_text_extents)(**label**: `Any`)
- [set_font](#UILabel.set_font+2)(**label**: `Any`, **font**: `Any`)
- [get_font](#UILabel.get_font)(**label**: `Any`)
- [set_color](#UILabel.set_color+2)(**label**: `Any`, **color**: `Any`)
- [get_color](#UILabel.get_color)(**label**: `Any`)
- [set_color_hover](#UILabel.set_color_hover+2)(**label**: `Any`, **color**: `Any`)
- [get_color_hover](#UILabel.get_color_hover)(**label**: `Any`)
- [set_text_size](#UILabel.set_text_size+2)(**label**: `Any`, **size**: `Any`)
- [get_text_size](#UILabel.get_text_size)(**label**: `Any`)
- [set_align](#UILabel.set_align+2)(**label**: `Any`, **align**: `Any`)
- [get_align](#UILabel.get_align)(**label**: `Any`)
- [set_align_vertical](#UILabel.set_align_vertical+2)(**label**: `Any`, **align**: `Any`)
- [get_align_vertical](#UILabel.get_align_vertical)(**label**: `Any`)

<hr/>
<endpoint module="luxe: ui/label" class="UILabel" signature="create(ui_entity : Any)"></endpoint>
<signature id="UILabel.create">UILabel.create(**ui_entity**: `Any`)
<a class="headerlink" href="#UILabel.create" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_text(label : Any, text : Any)"></endpoint>
<signature id="UILabel.set_text+2">UILabel.set_text(**label**: `Any`, **text**: `Any`)
<a class="headerlink" href="#UILabel.set_text+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text(label : Any)"></endpoint>
<signature id="UILabel.get_text">UILabel.get_text(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_render_text(label : Any)"></endpoint>
<signature id="UILabel.get_render_text">UILabel.get_render_text(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_render_text" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_extents(label : Any, offset : Any, count : Any)"></endpoint>
<signature id="UILabel.get_text_extents+3">UILabel.get_text_extents(**label**: `Any`, **offset**: `Any`, **count**: `Any`)
<a class="headerlink" href="#UILabel.get_text_extents+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_extents(label : Any)"></endpoint>
<signature id="UILabel.get_text_extents">UILabel.get_text_extents(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text_extents" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_font(label : Any, font : Any)"></endpoint>
<signature id="UILabel.set_font+2">UILabel.set_font(**label**: `Any`, **font**: `Any`)
<a class="headerlink" href="#UILabel.set_font+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_font(label : Any)"></endpoint>
<signature id="UILabel.get_font">UILabel.get_font(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_font" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_color(label : Any, color : Any)"></endpoint>
<signature id="UILabel.set_color+2">UILabel.set_color(**label**: `Any`, **color**: `Any`)
<a class="headerlink" href="#UILabel.set_color+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_color(label : Any)"></endpoint>
<signature id="UILabel.get_color">UILabel.get_color(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_color" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_color_hover(label : Any, color : Any)"></endpoint>
<signature id="UILabel.set_color_hover+2">UILabel.set_color_hover(**label**: `Any`, **color**: `Any`)
<a class="headerlink" href="#UILabel.set_color_hover+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_color_hover(label : Any)"></endpoint>
<signature id="UILabel.get_color_hover">UILabel.get_color_hover(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_color_hover" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_text_size(label : Any, size : Any)"></endpoint>
<signature id="UILabel.set_text_size+2">UILabel.set_text_size(**label**: `Any`, **size**: `Any`)
<a class="headerlink" href="#UILabel.set_text_size+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_size(label : Any)"></endpoint>
<signature id="UILabel.get_text_size">UILabel.get_text_size(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text_size" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_align(label : Any, align : Any)"></endpoint>
<signature id="UILabel.set_align+2">UILabel.set_align(**label**: `Any`, **align**: `Any`)
<a class="headerlink" href="#UILabel.set_align+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_align(label : Any)"></endpoint>
<signature id="UILabel.get_align">UILabel.get_align(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_align" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_align_vertical(label : Any, align : Any)"></endpoint>
<signature id="UILabel.set_align_vertical+2">UILabel.set_align_vertical(**label**: `Any`, **align**: `Any`)
<a class="headerlink" href="#UILabel.set_align_vertical+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_align_vertical(label : Any)"></endpoint>
<signature id="UILabel.get_align_vertical">UILabel.get_align_vertical(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_align_vertical" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

